defconfig : Add Intelliplug

--- a/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
@@ -3149,6 +3149,7 @@ CONFIG_MACH_WINGTECH_MSM8916=y
 CONFIG_MACH_T86519A1=y
 # CONFIG_MACH_YULONG is not set
 # CONFIG_MACH_YULONG_MSM8939 is not set
+CONFIG_INTELLI_PLUG=y
 
 #
 # Yulong board selection
