Defconfig : Refresh defconfig ( Updates to new version )

--- a/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
@@ -33,10 +33,10 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SandyKernel-v1.1"
+CONFIG_LOCALVERSION="-SandyKernel-v1.3"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -100,7 +100,7 @@ CONFIG_CGROUP_FREEZER=y
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_MEMCG is not set
+CONFIG_MEMCG=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -118,6 +118,7 @@ CONFIG_NET_NS=y
 CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -182,6 +183,8 @@ CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_SECCOMP_FILTER=y
 # CONFIG_CC_STACKPROTECTOR is not set
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
@@ -278,6 +281,7 @@ CONFIG_PCI_SYSCALL=y
 # CONFIG_ARM64_ICACHE_DISABLE is not set
 # CONFIG_ARM64_64K_PAGES is not set
 # CONFIG_CPU_BIG_ENDIAN is not set
+CONFIG_ARM64_ERRATUM_845719=y
 # CONFIG_ARM64_A57_ERRATA_832075 is not set
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
@@ -324,6 +328,7 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 CONFIG_KSM=y
+CONFIG_UKSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -331,10 +336,11 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
-CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
+CONFIG_PROCESS_RECLAIM=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_SECCOMP=y
 
 #
 # Boot options
@@ -395,18 +401,20 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_BOOST=y
@@ -916,7 +924,7 @@ CONFIG_CMA=y
 #
 # Default contiguous memory area size:
 #
-CONFIG_CMA_SIZE_MBYTES=64
+CONFIG_CMA_SIZE_MBYTES=8
 CONFIG_CMA_SIZE_SEL_MBYTES=y
 # CONFIG_CMA_SIZE_SEL_PERCENTAGE is not set
 # CONFIG_CMA_SIZE_SEL_MIN is not set
@@ -1832,6 +1840,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB350_CHARGER is not set
 # CONFIG_SMB135X_CHARGER is not set
 CONFIG_SMB1360_CHARGER_FG=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_SMB358_CHARGER is not set
 # CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
@@ -3045,9 +3054,6 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_DX_SEP is not set
-CONFIG_ZSMALLOC=y
-CONFIG_ZRAM=y
-CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
@@ -3065,10 +3071,7 @@ CONFIG_ZRAM_LZ4_COMPRESS=y
 # Android
 #
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ASHMEM=y
-# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -3241,6 +3244,11 @@ CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
 # CONFIG_MOBICORE_SUPPORT is not set
 # CONFIG_RESET_CONTROLLER is not set
+
+#
+# Android
+#
+CONFIG_ANDROID_BINDER_IPC=y
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS=y
@@ -3259,7 +3267,7 @@ CONFIG_SENSOR_POWER=y
 # CONFIG_PHY_MSM_SATA is not set
 # CONFIG_CP_ACCESS64 is not set
 CONFIG_MSM_BAM_DMUX=y
-# CONFIG_MSM_EVENT_TIMER is not set
+CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
